{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 276,
  "lineage": "9e326066-5ea9-7e55-5b81-27950d94d931",
  "resources": [
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05e7fe1e7978c64841080289494",
            "instance_id": "i-0e98a279a2dcf4f91",
            "instance_owner_id": "688191758412",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-074ff5cf5742962f4",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e7fe1e7978c6484",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_route_table.private",
            "module.nat.module.nat.aws_network_interface.main",
            "module.nat.module.nat.aws_security_group.main",
            "module.nat.module.nat.data.aws_vpc.main",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route.public_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:route-table/rtb-05e7fe1e7978c6484",
            "id": "rtb-05e7fe1e7978c6484",
            "owner_id": "688191758412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-074ff5cf5742962f4",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Fcknat"
            },
            "tags_all": {
              "Name": "Fcknat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f41e380db8199bcf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route.public_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-03fdd66a1fd2c0269",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbe2f3099e05da3a",
            "route_table_id": "rtb-05e7fe1e7978c6484",
            "subnet_id": "subnet-03fdd66a1fd2c0269"
          },
          "dependencies": [
            "module.nat.aws_route_table.private",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route.public_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-080ec168f9b6be03e",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022549f65c6fcfcf8",
            "route_table_id": "rtb-05e7fe1e7978c6484",
            "subnet_id": "subnet-080ec168f9b6be03e"
          },
          "dependencies": [
            "module.nat.aws_route_table.private",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route.public_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-0f2bb8836169f7930",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02483bbcaea2e012c",
            "route_table_id": "rtb-05e7fe1e7978c6484",
            "subnet_id": "subnet-0f2bb8836169f7930"
          },
          "dependencies": [
            "module.nat.aws_route_table.private",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route.public_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat.module.nat",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:vpc/vpc-0f41e380db8199bcf",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09472124905f2db1e",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-25d98c40",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f41e380db8199bcf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-072b0f94d026c6839",
            "owner_id": "688191758412",
            "tags": {
              "Name": "Test"
            }
          }
        }
      ]
    },
    {
      "module": "module.nat.module.nat",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:network-interface/eni-074ff5cf5742962f4",
            "attachment": [
              {
                "attachment_id": "eni-attach-0eda450a2b3be8383",
                "device_index": 1,
                "instance": "i-0e98a279a2dcf4f91"
              }
            ],
            "description": "subnet-07f6b2028e9be406e-fck-nat static private ENI",
            "id": "eni-074ff5cf5742962f4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ba:e7:dc:5b:25",
            "owner_id": "688191758412",
            "private_ip": "10.0.1.38",
            "private_ip_list": [
              "10.0.1.38"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.38"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c32115a1fec2af1e"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07f6b2028e9be406e",
            "tags": {
              "Name": "subnet-07f6b2028e9be406e-fck-nat"
            },
            "tags_all": {
              "Name": "subnet-07f6b2028e9be406e-fck-nat"
            }
          },
          "dependencies": [
            "module.nat.module.nat.aws_security_group.main",
            "module.nat.module.nat.data.aws_vpc.main",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route.public_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat.module.nat",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:security-group/sg-0c32115a1fec2af1e",
            "description": "Used in subnet-07f6b2028e9be406e-fck-nat instance of fck-nat in subnet subnet-07f6b2028e9be406e",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Unrestricted egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c32115a1fec2af1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Unrestricted ingress from within VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "subnet-07f6b2028e9be406e-fck-nat",
            "name_prefix": "",
            "owner_id": "688191758412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "subnet-07f6b2028e9be406e-fck-nat"
            },
            "tags_all": {
              "Name": "subnet-07f6b2028e9be406e-fck-nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f41e380db8199bcf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.module.nat.data.aws_vpc.main",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route.public_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:internet-gateway/igw-0a1571d65729c0fc0",
            "id": "igw-0a1571d65729c0fc0",
            "owner_id": "688191758412",
            "vpc_id": "vpc-0f41e380db8199bcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a1571d65729c0fc0",
            "id": "r-rtb-0d843f354201588911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d843f35420158891",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:route-table/rtb-0d843f35420158891",
            "id": "rtb-0d843f35420158891",
            "owner_id": "688191758412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1571d65729c0fc0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f41e380db8199bcf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0226405738566c252",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4a7724015e9d40a",
            "route_table_id": "rtb-0d843f35420158891",
            "subnet_id": "subnet-0226405738566c252"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-07f6b2028e9be406e",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cc4775dd07b3e68",
            "route_table_id": "rtb-0d843f35420158891",
            "subnet_id": "subnet-07f6b2028e9be406e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-0896ae764205c9565",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0067193c9d11e5713",
            "route_table_id": "rtb-0d843f35420158891",
            "subnet_id": "subnet-0896ae764205c9565"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:subnet/subnet-0f2bb8836169f7930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2bb8836169f7930",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688191758412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private ap-southeast-1a"
            },
            "tags_all": {
              "Name": "Private ap-southeast-1a"
            },
            "vpc_id": "vpc-0f41e380db8199bcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:subnet/subnet-080ec168f9b6be03e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080ec168f9b6be03e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688191758412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private ap-southeast-1b"
            },
            "tags_all": {
              "Name": "Private ap-southeast-1b"
            },
            "vpc_id": "vpc-0f41e380db8199bcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:subnet/subnet-03fdd66a1fd2c0269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fdd66a1fd2c0269",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688191758412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private ap-southeast-1c"
            },
            "tags_all": {
              "Name": "Private ap-southeast-1c"
            },
            "vpc_id": "vpc-0f41e380db8199bcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:subnet/subnet-07f6b2028e9be406e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f6b2028e9be406e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688191758412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public ap-southeast-1a"
            },
            "tags_all": {
              "Name": "Public ap-southeast-1a"
            },
            "vpc_id": "vpc-0f41e380db8199bcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:subnet/subnet-0226405738566c252",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0226405738566c252",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688191758412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public ap-southeast-1b"
            },
            "tags_all": {
              "Name": "Public ap-southeast-1b"
            },
            "vpc_id": "vpc-0f41e380db8199bcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:subnet/subnet-0896ae764205c9565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0896ae764205c9565",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688191758412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public ap-southeast-1c"
            },
            "tags_all": {
              "Name": "Public ap-southeast-1c"
            },
            "vpc_id": "vpc-0f41e380db8199bcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:688191758412:vpc/vpc-0f41e380db8199bcf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dca4701e5eb5da63",
            "default_route_table_id": "rtb-072b0f94d026c6839",
            "default_security_group_id": "sg-071b9fb5b18ae725c",
            "dhcp_options_id": "dopt-25d98c40",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f41e380db8199bcf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-072b0f94d026c6839",
            "owner_id": "688191758412",
            "tags": {
              "Name": "Test"
            },
            "tags_all": {
              "Name": "Test"
            }
          }
        }
      ]
    }
  ]
}